--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png" alt="java">
                 </div>
                 <div class="col">
-                    <img src="file:///C:/Users/Orange/Desktop/Portfolio-Website/github.jpg" alt="github">
+                    <img src="github.jpg" alt="github">
                 </div>
                 <div class="col">
                     <img src="https://img.icons8.com/color/48/000000/css3.png" alt="css3">
@@ -93,13 +93,13 @@
                     <img src="https://img.icons8.com/color/48/000000/redux.png" alt="redux">
                 </div>
                 <div class="col">
-                    <img src="file:///C:/Users/Orange/Desktop/Portfolio-Website/next-js.png" alt="next-js">
+                    <img src="next-js.png" alt="next-js">
                 </div>
                 <div class="col">
                     <img src="https://img.icons8.com/color/48/000000/wordpress.png" alt="wordpress">
                 </div>
                 <div class="col">
-                    <img src="file:///C:/Users/Orange/Desktop/Portfolio-Website/qa.jpg" alt="qa">
+                    <img src="qa.jpg" alt="qa">
                 </div>
             </div>
             <!-- <div class="row">
