--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h1><i class="fas fa-user-alt"></i> About<span> Me</span></h1>
             <h2 id="ww">I'm Aya</h2>
             <p>I am a civil engineer looking for a new opportunity in the software testing field, where I can increase my skills, gain knowledge in the field of information technology, and add value to my workplace.</p>
-            <a href="file:///C:/Users/Orange/Downloads/Aya%20cv.pdf" class="Home-btn" target="_blank">
+            <a href="https://drive.google.com/file/d/1HbeiOMrgU5JiarKwOlXdYdLEiwL3q0y9/view?usp=drive_link" class="Home-btn" target="_blank">
             <span>Resume</span><i class="fas fa-chevron-right"></i></a>
         </div>
 
