--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Aya</title>
@@ -21,7 +22,6 @@
         <a href="#About">About</a>
         <a href="#Skills">Skills</a>
         <a href="#Education">Education</a>
-        <a href="#Project">Project</a>
         <a href="#Experience">Experience</a>
         <a href="#Contact">Contact</a>
     </nav>
@@ -136,7 +136,7 @@
                 <img src="school.jpg.jfif" alt="school">
             </div>
             <div class="description">
-                <h5>HSC | Zainab Bint Al-Awam</h5>
+                <h5 style="font-size: 1.2em;">HSC | Zainab Bint Al-Awam</h5>
                 <span>2012-2014 | Completed</span>
             </div>
         </div>
@@ -146,7 +146,7 @@
                 <img src="balqa.jpg" alt="school">
             </div>
             <div class="description">
-                <h5>B.E | Al- Balqa' Applied</h5>
+                <h5>B.E | Al-Balqa' Applied</h5>
                 <span>2014-2019 | Completed</span>
             </div>
         </div>
@@ -164,9 +164,60 @@
     </section>
 <!-- Education section end -->
 
+<!-- Experience section starts -->
+    <section class="cards" id="Experience">
+        <h1><i class="fas fa-briefcase"></i> Experience</h1>
+        <div class="container">
+            <div class="card1">
+                <div class="itg">
+                    <img src="itg.jpg" alt="itg">
+                </div>
+                <div class="description1">
+                <div class="company">
+                    <h5 style="margin-top: 10px;" >ITG | Integrated Technology Group</h5>
+                    <span>Jan.2021 – May. 2024</span>
+                </div>
+                <div class="work">   
+                    <ol>
+                        <li>Testing Applications (Great Tafsirs, Iqamah Prayer and Alathan Alshareef)</li>
+                        <ul>
+                            <li><span class="line"> Duties:</span> finding bugs within the applications, writing test cases, and uploading them to TFS</li>
+                        </ul><br>
+                        <li>EduWave WebSite</li>
+                        <ul>
+                            <li><span class="line"> Duties:</span> Creating books, editing them, and overseeing their proofreading.</li>
+                        </ul><br>
+                        <li>Quranic Thought WebSite</li>
+                        <ul>
+                            <li><span class="line"> Duties:</span> Adding audiobooks, publishing books, and ensuring manuscripts accuracy on the WebSit</li>
+                        </ul>
+                    </ol>
+                </div>
+                </div>
+            </div>
+        </div>
+        
 
+    </section>
+<!-- Experience section end -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- Contact section starts -->
+<footer class="footer" id="Contact">
+        <div class="logo-fo">
+            <img src="logo.png" alt="logo">
+        </div>
+        <div class="text-fo">
+            <p>© 2024 Copyrights</p>
+        </div>
+        <div class="social">
+            <a href="https://www.linkedin.com/in/aya-alrimawi-284730134?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/AyahRimawi" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><i class="fas fa-envelope"></i></a>
+        </div>
+
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 </html>
