--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="#Skills">Skills</a>
         <a href="#Education">Education</a>
         <a href="#Experience">Experience</a>
+        <a href="#Projects">Projects</a>
         <a href="#Contact">Contact</a>
     </nav>
     </header>
@@ -34,8 +35,10 @@
         <h2>Hello, I'm Aya</h2>
         <h1>Civil Enginering</h1>
         <h2>I Am Into Web Development</h2>
-        <a href="#About" class="Home-btn"><span>About Me</span>
-            <i class="fas fa-arrow-circle-down"></i></a>
+        <!-- <a href="#About" class="Home-btn"><span>About Me</span>
+            <i class="fas fa-arrow-circle-down"></i></a> -->
+        <a href="https://drive.google.com/file/d/1HbeiOMrgU5JiarKwOlXdYdLEiwL3q0y9/view?usp=drive_link" class="Home-btn" target="_blank">
+                <span>Resume</span><i class="fas fa-chevron-right"></i></a>
 
         <div class="social">
             <a href="https://www.linkedin.com/in/aya-alrimawi-284730134?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -52,78 +55,62 @@
             <h1><i class="fas fa-user-alt"></i> About<span> Me</span></h1>
             <h2 id="ww">I'm Aya</h2>
             <p>I am a civil engineer looking for a new opportunity in the software testing field, where I can increase my skills, gain knowledge in the field of information technology, and add value to my workplace.</p>
-            <a href="https://drive.google.com/file/d/1HbeiOMrgU5JiarKwOlXdYdLEiwL3q0y9/view?usp=drive_link" class="Home-btn" target="_blank">
-            <span>Resume</span><i class="fas fa-chevron-right"></i></a>
         </div>
 
     </section>
     <!-- about section end -->
 
     <!-- skills section starts -->
-    <section class="cards" id="Skills">
+    <section class="cards-skills" id="Skills">
         <div>
-            <h1><i class="fas fa-laptop-code"></i> Skills</h1>
-            <div class="container-text-center">
-            <div class="row">
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/html-5--v1.png" alt="html-5">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png" alt="java">
-                </div>
-                <div class="col">
-                    <img src="github.jpg" alt="github">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/css3.png" alt="css3">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/48/000000/external-react-a-javascript-library-for-building-user-interfaces-logo-color-tal-revivo.png" alt="revivo">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/nodejs.png" alt="nodejs">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/mysql-logo.png" alt="mysql">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="mongodb">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/redux.png" alt="redux">
-                </div>
-                <div class="col">
-                    <img src="next-js.png" alt="next-js">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/wordpress.png" alt="wordpress">
-                </div>
-                <div class="col">
-                    <img src="qa.jpg" alt="qa">
-                </div>
+        <h1><i class="fas fa-laptop-code"></i> Skills</h1>
+        <div class="container-text-center">
+        <div class="row">
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/color/48/000000/html-5--v1.png" alt="html-5">
             </div>
-            <!-- <div class="row">
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/mysql-logo.png" alt="">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/redux.png" alt="">
-                </div>
-                <div class="col">
-                    <img src="file:///C:/Users/Orange/Desktop/next-js.png" alt="">
-                </div>
-                <div class="col">
-                    <img src="https://img.icons8.com/color/48/000000/wordpress.png" alt="">
-                </div>
-                <div class="col">
-                    <img src="file:///C:/Users/Orange/Desktop/qa.jpg" alt="">
-                </div>
-            </div> -->
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png" alt="java">
+            </div>
+            <div class="col">
+                <img class="skills-pic" src="github.jpg" alt="github">
+            </div>
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/color/48/000000/mysql-logo.png" alt="">
             </div>
         </div>
+
+         <div class="row">
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/color/48/000000/css3.png" alt="css3">
+            </div>
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/48/000000/external-react-a-javascript-library-for-building-user-interfaces-logo-color-tal-revivo.png" alt="revivo">
+            </div>
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/color/48/000000/nodejs.png" alt="nodejs">
+            </div>
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/color/48/000000/redux.png" alt="">
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/color/48/000000/mongodb.png" alt="">
+            </div>
+            <div class="col">
+                <img class="skills-pic" src="next-js.png" alt="">
+            </div>
+            <div class="col">
+                <img class="skills-pic" src="https://img.icons8.com/color/48/000000/wordpress.png" alt="">
+            </div>
+            <div class="col">
+                <img class="skills-pic" src="qa.jpg" alt="">
+            </div>
+        </div>
+        </div>
+    </div>
     </section>
     <!-- skills section end -->
 
@@ -136,7 +123,7 @@
                 <img src="school.jpg.jfif" alt="school">
             </div>
             <div class="description">
-                <h5 style="font-size: 1.2em;">HSC | Zainab Bint Al-Awam</h5>
+                <h5 style="font-size: 1.1em;">HSC | Zainab Bint Al-Awam</h5>
                 <span>2012-2014 | Completed</span>
             </div>
         </div>
@@ -200,6 +187,59 @@
 
     </section>
 <!-- Experience section end -->
+<hr class="hr">
+<!-- Projects section starts -->
+<section class="cards-proj" id="Projects">
+    <h1><i class="fas fa-laptop-code"></i>  Projects</h1>
+    <div class="content-proj">
+        <div class="card-proj">
+            <div class="photo-proj">
+            <a href="https://github.com/AyahRimawi/HTML-Task-?authuser=0" target="_blank">
+                <img class="img-proj" src="html.png" alt="html">
+            </a>
+            </div>
+            <div class="description-proj">
+                <h5>HTML | HTML Task </h5>
+            </div>
+
+        </div>
+
+        <div class="card-proj">
+            <div class="photo-proj">
+            <a href="https://github.com/AyahRimawi/CSS-Task?authuser=0" target="_blank">
+                <img class="img-proj" src="css.png" alt="css">
+            </a>
+            </div>
+            <div class="description-proj">
+                <h5>CSS | CSS practice </h5>
+            </div>
+        </div>
+
+        <div class="card-proj">
+            <div class="photo-proj">
+            <a href="https://github.com/AyahRimawi/Flex-and-Grid-Task?authuser=0" target="_blank">
+                <img class="img-proj" src="grid.png" alt="grid">
+            </a>
+            </div>
+            <div class="description-proj">
+                <h5>CSS | Flex and Grid</h5>
+ 
+            </div>
+        </div>
+        <div class="card-proj">
+            <div class="photo-proj">
+                <a href="https://github.com/AyahRimawi/Bootstrap-Task?authuser=0" target="_blank">
+                <img class="img-proj" src="bootstrap.png" alt="bootstrap">
+            </a>
+            </div>
+            <div class="description-proj">
+                <h5>Bootstrap | Bootstrap Task</h5>
+
+            </div>
+        </div>
+    </div>
+    </section>
+<!-- Projects section starts -->
 
 <!-- Contact section starts -->
 <footer class="footer" id="Contact">
@@ -216,6 +256,7 @@
         </div>
 
 </footer>
+<!-- Contact section end -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
