--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
     <div class="logo">
         <div class="pic">
-        <img src="logo.png" alt="Logo"></div>
+        <img class="img-logo" src="logo.png" alt="Logo"></div>
         <a href="#Home" class="name">Aya</a>
     </div>
     <nav class="navigation">
@@ -120,7 +120,7 @@
     <div class="content">
         <div class="card">
             <div class="photo">
-                <img src="school.jpg.jfif" alt="school">
+                <img class="img-edu" src="school.jpg.jfif" alt="school">
             </div>
             <div class="description">
                 <h5 style="font-size: 1.1em;">HSC | Zainab Bint Al-Awam</h5>
@@ -130,7 +130,7 @@
 
         <div class="card">
             <div class="photo">
-                <img src="balqa.jpg" alt="school">
+                <img class="img-edu" src="balqa.jpg" alt="school">
             </div>
             <div class="description">
                 <h5>B.E | Al-Balqa' Applied</h5>
@@ -140,7 +140,7 @@
 
         <div class="card">
             <div class="photo">
-                <img src="orange.jpg.png" alt="school">
+                <img class="img-edu" src="orange.jpg.png" alt="school">
             </div>
             <div class="description">
                 <h5>Orange Coding Academy</h5>
@@ -157,7 +157,7 @@
         <div class="container">
             <div class="card1">
                 <div class="itg">
-                    <img src="itg.jpg" alt="itg">
+                    <img class="img-exp" src="itg.jpg" alt="itg">
                 </div>
                 <div class="description1">
                 <div class="company">
@@ -244,7 +244,7 @@
 <!-- Contact section starts -->
 <footer class="footer" id="Contact">
         <div class="logo-fo">
-            <img src="logo.png" alt="logo">
+            <img class="img-logo" src="logo.png" alt="logo">
         </div>
         <div class="text-fo">
             <p>© 2024 Copyrights</p>
