--- a/index.html
+++ b/index.html
@@ -12,7 +12,66 @@
 <body>
     <!-- navbar starts -->
     <header>
-    <div class="logo">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="logo">
+                <div class="pic">
+                <img class="img-logo" src="logo.png" alt="Logo"></div>
+                <a href="#Home" class="name">Aya</a>
+            </div>
+            <!-- <div class="logo">
+              <a class="pic" href="#">
+                <img class="img-logo" src="logo.png" alt="Bootstrap" width="30" height="24">
+                <span class="name" style="">Aya</span>
+              </a> -->
+              
+            </div>
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="navigation" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link"  href="#Home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#About">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Skills">Skills</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Education">Education</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Experience">Experience</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Projects">Projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Contact">Contact</a>
+                  </li>
+                </ul> 
+              </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="logo">
         <div class="pic">
         <img class="img-logo" src="logo.png" alt="Logo"></div>
         <a href="#Home" class="name">Aya</a>
@@ -25,7 +84,7 @@
         <a href="#Experience">Experience</a>
         <a href="#Projects">Projects</a>
         <a href="#Contact">Contact</a>
-    </nav>
+    </nav> -->
     </header>
     <!-- navbar end -->
 
