--- a/index.html
+++ b/index.html
@@ -12,21 +12,92 @@
 <body>
     <!-- navbar starts -->
     <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid" id="logo">
+                <a class="navbar-brand" href="#">
+                  <img src="logo.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+                  <span class="name">Aya</span>
+                </a>
+
+                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+              </div>
+            <div class="container-fluid">
+
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#Home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#About">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Skills">Skills</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Education">Education</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Experience">Experience</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Projects">Projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Contact">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--         
         <nav class="navbar navbar-expand-lg ">
             <div class="logo">
                 <div class="pic">
                 <img class="img-logo" src="logo.png" alt="Logo"></div>
                 <a href="#Home" class="name">Aya</a>
             </div>
-            <!-- <div class="logo">
+             <div class="logo">
               <a class="pic" href="#">
                 <img class="img-logo" src="logo.png" alt="Bootstrap" width="30" height="24">
                 <span class="name" style="">Aya</span>
               </a> -->
-              
+<!--               
             </div>
             <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="navigation" id="navbarSupportedContent">
@@ -54,21 +125,7 @@
                   </li>
                 </ul> 
               </div>
-            </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div> -->
 
 
     <!-- <div class="logo">
