--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
 
     <!-- hero section starts -->
     <section class="begin" id="Home">
-    <div>
-        <h2>Hello, I'm Aya</h2>
-        <h1>Civil Enginering</h1>
-        <h2>I Am Into Web Development</h2>
+    <div class="hero-word">
+        <h2 class="cc">Hello, I'm Aya</h2>
+        <h1 class="cc">Civil Enginering</h1>
+        <h2 class="cc">I Am Into Web Development</h2>
         <!-- <a href="#About" class="Home-btn"><span>About Me</span>
             <i class="fas fa-arrow-circle-down"></i></a> -->
-        <a href="https://drive.google.com/file/d/1HbeiOMrgU5JiarKwOlXdYdLEiwL3q0y9/view?usp=drive_link" class="Home-btn" target="_blank">
+        <a id="hero-word" href="https://drive.google.com/file/d/1HbeiOMrgU5JiarKwOlXdYdLEiwL3q0y9/view?usp=drive_link" class="Home-btn" target="_blank">
                 <span>Resume</span><i class="fas fa-chevron-right"></i></a>
 
         <div class="social">
@@ -232,7 +232,7 @@
 
     <!-- Education section starts -->
     <section class="cards" id="Education">
-    <h1><i class="fas fa-graduation-cap"></i> Education</h1>
+    <h1 class="eea"><i class="fas fa-graduation-cap"></i> Education</h1>
     <div class="content">
         <div class="card">
             <div class="photo">
